Basic function works, add checking all folders and iterating through the videos.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,10 @@ cmake_minimum_required(VERSION 3.6)
 project(videoFrames)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/bin")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -lboost_system -lboost_filesystem")
 
 find_package( OpenCV REQUIRED )
 include_directories("/usr/include/opencv2")
-
-
 
 add_executable(main main.cpp)
 include_directories(${OpenCV_INCLUDE_DIRS})
